# opentitan-provisioning

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  apt-requirements.txt  generate_test_hpke_keys.go  go.mod  go.sum  opentitan_llvm.patch
.github/workflows/: main.yml
config/: token_init.sh
config/containers/: BUILD.bazel  provapp.yml.tmpl
config/env/dev/: spm.env
config/env/prod/: spm.env
config/spm/: BUILD.bazel  sku_auth.yml.tmpl  sku_cr01.yml.tmpl  sku_pi01.yml.tmpl  sku_sival.yml.tmpl  sku_sival_mldsa.yml.tmpl  sku_test_hpke.yml.tmpl  sku_test_mldsa.yml.tmpl  sku_ti01.yml.tmpl
config/spm/sku/: BUILD.bazel
config/spm/sku/eg/common/: BUILD.bazel  ca_root_mldsa.conf
config/spm/sku/sival_mldsa/: BUILD.bazel
config/spm/sku/test_hpke/: BUILD.bazel
config/spm/sku/test_hpke/ca/: hpke_ecdsa.pub.der  hpke_mlkem.pub
config/spm/sku/test_mldsa/: BUILD.bazel  ca_int_dice.conf  ca_int_ext.conf
docs/: deployment.md  spm.md
integration/: run_client_tests.sh  run_pa_loadtest.sh  run_tls_test.sh
patches/: BUILD.bazel  protobuf_matchers_fix.patch  rules_docker_fix.patch  rules_rust.bindgen_static_lib.patch  softhsm2_include_time.patch  toolchains_llvm_no_root_check.patch
release/: BUILD.bazel
rules/: hsm.bzl  hsmtool.bzl  quality.bzl  repos.bzl  unzip.bzl  util.bzl  vendor.bzl  windows_binary.bzl
rules/scripts/: hsm_ca_sign.sh
src/ate/: BUILD.bazel  ate_api.h  ate_api_json_commands.cc  ate_api_json_commands_test.cc  ate_client.cc  ate_client.h  ate_dll.cc  ate_perso_blob.cc  ate_perso_blob.h  ate_perso_blob_test.cc  perso_blob.go  perso_blob_test.go
src/ate/proto/: dut_commands.proto
src/ate/test_programs/: BUILD.bazel  ft.cc  tls_test.cc
src/ate/test_programs/otlib_wrapper/: BUILD.bazel
src/ate/test_programs/otlib_wrapper/src/: lib.rs
src/ate/testutils/: BUILD  dututils.go
src/pa/: BUILD.bazel  loadtest.go  mldsa_loadtest.go  pa_server.go
src/pa/proto/: BUILD.bazel  pa.proto
src/pa/services/registry_shim/: registry_shim.go
src/pk11/: BUILD.bazel  mldsa.go  mldsa_test.go  object.go  pk11.go  test_support.go
src/proto/: BUILD.bazel  device_testdata.go  validators.go
src/proto/crypto/: BUILD.bazel  cert.proto  mldsa.proto
src/proxy_buffer/: BUILD.bazel  pb_server.go
src/proxy_buffer/store/: BUILD.bazel  filedb.go
src/spm/: spm_server.go
src/spm/services/: BUILD.bazel  se.go  se_pk11.go  se_pk11_test.go  skucfg.go  spm.go
src/spm/services/testdata/: mldsa_tbs.der
src/spm/services/testutils/: BUILD.bazel  tbsgen.go
src/spm/services/testutils/tbsgen/: main.go
src/testing/cert-util/: BUILD.bazel
src/testing/cert-util/src/: main.rs
src/testing/fake_registry/: BUILD.bazel
src/transport/: BUILD.bazel  grpconn.go  grpconn_test.go
tests/: run_pa_hpke_loadtest.sh  run_pa_loadtest.sh  run_pa_mldsa_loadtest.sh
toolchain/: BUILD.bazel  clang_wrapper.sh
util/: integration_test_setup.sh
util/containers/: deploy_test_k8_pod.sh
util/containers/softhsm2/: Dockerfile
