# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

exports_files([
    "WORKSPACE",
])

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

# Define configuration settings for dev and prod environments.
#
# To select the dev or prod environment, use the --define flag:
#
#     bazel build --define env=dev //...
#     bazel build --define env=prod //...
config_setting(
    name = "dev_env",
    define_values = {"env": "dev"},
)

config_setting(
    name = "prod_env",
    define_values = {"env": "prod"},
)

nogo(
    name = "vet",
    vet = True,
    visibility = ["//visibility:public"],
)
